src/test/ui/issues/issue-7092.stderr
error[E0308]: mismatched types
  --> $DIR/issue-7092.rs:6:9
   |
LL |     match x {
   |           - this match expression has type `Whatever`
LL |         Some(field) =>
   |         ^^^^^^^^^^^ expected enum `Whatever`, found enum `std::option::Option`
   |
   = note: expected type `Whatever`
              found type `std::option::Option<_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
